syntax = "proto3";

package kvstore;

option go_package = "../proto";

service KeyValueStore {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Heartbeat(Empty) returns (Empty);
  rpc Replicate(ReplicateRequest) returns (Empty);
  rpc UpdateLeader(UpdateLeaderRequest) returns (Empty);
  rpc GetLogIndex(Empty) returns (LogIndexResponse); 
  rpc SendMinLogIndex(Empty) returns (MinLogIndexResponse);
  rpc ClearLogs(ClearFromNum) returns (Empty);
  rpc LogCommit(LogCommitRequest) returns (LogCommitResponse);
  rpc GetLogEntry(GetLogEntryRequest) returns (GetLogEntryResponse);
}

message GetLogEntryRequest {
  int32 index = 1;
}

message GetLogEntryResponse {
    string key = 1;
    string value = 2;
    int32 logIndex = 3;
}

message LogIndexResponse {
  int32 logIndex = 1;
}

message MinLogIndexResponse {
  int32 minLogIndex = 1;
}

message LogCommitRequest {
  string key = 1;
  string value = 2;
  int32 logIndex = 3;
}

message LogCommitResponse {
  bool success = 1;
}

message ClearFromNum {
  int32 fromNum = 1;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message Empty {}

message LeaderResponse {
  string leaderIp = 1;
}

message ReplicateRequest {
  string key = 1;
  string value = 2;
}

// New message for leader update.
message UpdateLeaderRequest {
  string leaderIp = 1;
}
